glyles/gws/GWSParser.py
# Generated from GWS.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GWSParser ( Parser ):

    grammarFileName = "GWS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'freeEnd'", "'redEnd'", "<INVALID>", 
                     "'C'", "'N'", "'O'", "'P'", "<INVALID>", "'Anhydro'", 
                     "'0d'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "';'", "','", "'-'", "'--'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "'a'", "'ai'", 
                     "'c'", "'d'", "'e'", "'t'", "'='", "'i'", "'/'", "'?'", 
                     "'$'" ]

    symbolicNames = [ "<INVALID>", "FREEEND", "REDEND", "SAC", "CARBON", 
                      "NITROGEN", "OXYGEN", "PHOSPHOR", "FG", "ANHYDRO", 
                      "HEAD", "HEADD", "END", "COUNT", "TYPE", "RING", "NUM", 
                      "SEMICOLON", "COLON", "DASH", "DOUBLEDASH", "LPAR", 
                      "RPAR", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "A", 
                      "AI", "C", "D", "E", "T", "EQ", "I", "SLASH", "QMARK", 
                      "DOLLAR" ]

    RULE_start = 0
    RULE_float = 1
    RULE_branch = 2
    RULE_deriv = 3
    RULE_saci = 4
    RULE_con = 5
    RULE_add = 6
    RULE_fgi = 7
    RULE_carb = 8
    RULE_modi = 9
    RULE_qnum = 10
    RULE_typi = 11
    RULE_bridge = 12
    RULE_ct = 13
    RULE_bos = 14

    ruleNames =  [ "start", "float", "branch", "deriv", "saci", "con", "add", 
                   "fgi", "carb", "modi", "qnum", "typi", "bridge", "ct", 
                   "bos" ]

    EOF = Token.EOF
    FREEEND=1
    REDEND=2
    SAC=3
    CARBON=4
    NITROGEN=5
    OXYGEN=6
    PHOSPHOR=7
    FG=8
    ANHYDRO=9
    HEAD=10
    HEADD=11
    END=12
    COUNT=13
    TYPE=14
    RING=15
    NUM=16
    SEMICOLON=17
    COLON=18
    DASH=19
    DOUBLEDASH=20
    LPAR=21
    RPAR=22
    LBRACE=23
    RBRACE=24
    LBRACK=25
    RBRACK=26
    A=27
    AI=28
    C=29
    D=30
    E=31
    T=32
    EQ=33
    I=34
    SLASH=35
    QMARK=36
    DOLLAR=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bos(self):
            return self.getTypedRuleContext(GWSParser.BosContext,0)


        def branch(self):
            return self.getTypedRuleContext(GWSParser.BranchContext,0)


        def DOLLAR(self):
            return self.getToken(GWSParser.DOLLAR, 0)

        def LBRACK(self):
            return self.getToken(GWSParser.LBRACK, 0)

        def float_(self):
            return self.getTypedRuleContext(GWSParser.FloatContext,0)


        def getRuleIndex(self):
            return GWSParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = GWSParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.bos()
            self.state = 31
            self.branch()
            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 32
                self.match(GWSParser.LBRACK)
                self.state = 33
                self.float_()


            self.state = 36
            self.match(GWSParser.DOLLAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FloatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def branch(self):
            return self.getTypedRuleContext(GWSParser.BranchContext,0)


        def LPAR(self):
            return self.getToken(GWSParser.LPAR, 0)

        def float_(self):
            return self.getTypedRuleContext(GWSParser.FloatContext,0)


        def RPAR(self):
            return self.getToken(GWSParser.RPAR, 0)

        def getRuleIndex(self):
            return GWSParser.RULE_float

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloat" ):
                listener.enterFloat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloat" ):
                listener.exitFloat(self)




    def float_(self):

        localctx = GWSParser.FloatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_float)
        try:
            self.state = 44
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.branch()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.match(GWSParser.LPAR)
                self.state = 40
                self.float_()
                self.state = 41
                self.match(GWSParser.RPAR)
                self.state = 42
                self.branch()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BranchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def con(self):
            return self.getTypedRuleContext(GWSParser.ConContext,0)


        def deriv(self):
            return self.getTypedRuleContext(GWSParser.DerivContext,0)


        def LPAR(self, i:int=None):
            if i is None:
                return self.getTokens(GWSParser.LPAR)
            else:
                return self.getToken(GWSParser.LPAR, i)

        def branch(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GWSParser.BranchContext)
            else:
                return self.getTypedRuleContext(GWSParser.BranchContext,i)


        def RPAR(self, i:int=None):
            if i is None:
                return self.getTokens(GWSParser.RPAR)
            else:
                return self.getToken(GWSParser.RPAR, i)

        def getRuleIndex(self):
            return GWSParser.RULE_branch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBranch" ):
                listener.enterBranch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBranch" ):
                listener.exitBranch(self)




    def branch(self):

        localctx = GWSParser.BranchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_branch)
        try:
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.con()
                self.state = 47
                self.deriv()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.match(GWSParser.LPAR)
                self.state = 50
                self.branch()
                self.state = 51
                self.match(GWSParser.RPAR)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 53
                self.con()
                self.state = 54
                self.deriv()
                self.state = 61
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 55
                        self.match(GWSParser.LPAR)
                        self.state = 56
                        self.branch()
                        self.state = 57
                        self.match(GWSParser.RPAR) 
                    self.state = 63
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                self.state = 64
                self.branch()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DerivContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HEADD(self):
            return self.getToken(GWSParser.HEADD, 0)

        def DASH(self):
            return self.getToken(GWSParser.DASH, 0)

        def COLON(self):
            return self.getToken(GWSParser.COLON, 0)

        def RING(self):
            return self.getToken(GWSParser.RING, 0)

        def modi(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GWSParser.ModiContext)
            else:
                return self.getTypedRuleContext(GWSParser.ModiContext,i)


        def saci(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GWSParser.SaciContext)
            else:
                return self.getTypedRuleContext(GWSParser.SaciContext,i)


        def getRuleIndex(self):
            return GWSParser.RULE_deriv

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeriv" ):
                listener.enterDeriv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeriv" ):
                listener.exitDeriv(self)




    def deriv(self):

        localctx = GWSParser.DerivContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_deriv)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(GWSParser.HEADD)
            self.state = 69
            self.match(GWSParser.DASH)
            self.state = 73
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 70
                    self.modi() 
                self.state = 75
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 77 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 76
                    self.saci()

                else:
                    raise NoViableAltException(self)
                self.state = 79 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 601584) != 0):
                self.state = 81
                self.modi()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 87
            self.match(GWSParser.COLON)
            self.state = 88
            self.match(GWSParser.RING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SaciContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COUNT(self):
            return self.getToken(GWSParser.COUNT, 0)

        def SAC(self):
            return self.getToken(GWSParser.SAC, 0)

        def getRuleIndex(self):
            return GWSParser.RULE_saci

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSaci" ):
                listener.enterSaci(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSaci" ):
                listener.exitSaci(self)




    def saci(self):

        localctx = GWSParser.SaciContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_saci)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            _la = self._input.LA(1)
            if not(_la==3 or _la==13):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOUBLEDASH(self):
            return self.getToken(GWSParser.DOUBLEDASH, 0)

        def qnum(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GWSParser.QnumContext)
            else:
                return self.getTypedRuleContext(GWSParser.QnumContext,i)


        def typi(self):
            return self.getTypedRuleContext(GWSParser.TypiContext,0)


        def getRuleIndex(self):
            return GWSParser.RULE_con

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCon" ):
                listener.enterCon(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCon" ):
                listener.exitCon(self)




    def con(self):

        localctx = GWSParser.ConContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_con)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(GWSParser.DOUBLEDASH)
            self.state = 93
            self.qnum()
            self.state = 94
            self.typi()
            self.state = 95
            self.qnum()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(GWSParser.EQ, 0)

        def LBRACK(self):
            return self.getToken(GWSParser.LBRACK, 0)

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(GWSParser.NUM)
            else:
                return self.getToken(GWSParser.NUM, i)

        def RBRACK(self):
            return self.getToken(GWSParser.RBRACK, 0)

        def ct(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GWSParser.CtContext)
            else:
                return self.getTypedRuleContext(GWSParser.CtContext,i)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(GWSParser.COLON)
            else:
                return self.getToken(GWSParser.COLON, i)

        def C(self):
            return self.getToken(GWSParser.C, 0)

        def getRuleIndex(self):
            return GWSParser.RULE_add

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd" ):
                listener.enterAdd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd" ):
                listener.exitAdd(self)




    def add(self):

        localctx = GWSParser.AddContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_add)
        self._la = 0 # Token type
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [33]:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.match(GWSParser.EQ)
                self.state = 98
                self.match(GWSParser.LBRACK)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==29 or _la==32:
                    self.state = 99
                    self.ct()


                self.state = 102
                self.match(GWSParser.NUM)
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==18:
                    self.state = 103
                    self.match(GWSParser.COLON)
                    self.state = 105
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==29 or _la==32:
                        self.state = 104
                        self.ct()


                    self.state = 107
                    self.match(GWSParser.NUM)
                    self.state = 112
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 113
                self.match(GWSParser.RBRACK)
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(GWSParser.C)
                self.state = 115
                self.match(GWSParser.LBRACK)
                self.state = 116
                self.match(GWSParser.NUM)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==18:
                    self.state = 117
                    self.match(GWSParser.COLON)
                    self.state = 118
                    self.match(GWSParser.NUM)
                    self.state = 123
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 124
                self.match(GWSParser.RBRACK)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FgiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COUNT(self):
            return self.getToken(GWSParser.COUNT, 0)

        def bridge(self):
            return self.getTypedRuleContext(GWSParser.BridgeContext,0)


        def FG(self):
            return self.getToken(GWSParser.FG, 0)

        def getRuleIndex(self):
            return GWSParser.RULE_fgi

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFgi" ):
                listener.enterFgi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFgi" ):
                listener.exitFgi(self)




    def fgi(self):

        localctx = GWSParser.FgiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_fgi)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.match(GWSParser.COUNT)
                pass
            elif token in [4, 5, 6, 7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.bridge()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self.match(GWSParser.FG)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CarbContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CARBON(self):
            return self.getToken(GWSParser.CARBON, 0)

        def NUM(self):
            return self.getToken(GWSParser.NUM, 0)

        def add(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GWSParser.AddContext)
            else:
                return self.getTypedRuleContext(GWSParser.AddContext,i)


        def AI(self):
            return self.getToken(GWSParser.AI, 0)

        def A(self):
            return self.getToken(GWSParser.A, 0)

        def I(self):
            return self.getToken(GWSParser.I, 0)

        def getRuleIndex(self):
            return GWSParser.RULE_carb

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCarb" ):
                listener.enterCarb(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCarb" ):
                listener.exitCarb(self)




    def carb(self):

        localctx = GWSParser.CarbContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_carb)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 17582522368) != 0):
                self.state = 132
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 17582522368) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 135
            self.match(GWSParser.CARBON)
            self.state = 136
            self.match(GWSParser.NUM)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29 or _la==33:
                self.state = 137
                self.add()
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(GWSParser.NUM)
            else:
                return self.getToken(GWSParser.NUM, i)

        def DASH(self, i:int=None):
            if i is None:
                return self.getTokens(GWSParser.DASH)
            else:
                return self.getToken(GWSParser.DASH, i)

        def ANHYDRO(self):
            return self.getToken(GWSParser.ANHYDRO, 0)

        def COLON(self):
            return self.getToken(GWSParser.COLON, 0)

        def bridge(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GWSParser.BridgeContext)
            else:
                return self.getTypedRuleContext(GWSParser.BridgeContext,i)


        def fgi(self):
            return self.getTypedRuleContext(GWSParser.FgiContext,0)


        def D(self):
            return self.getToken(GWSParser.D, 0)

        def E(self):
            return self.getToken(GWSParser.E, 0)

        def carb(self):
            return self.getTypedRuleContext(GWSParser.CarbContext,0)


        def HEAD(self):
            return self.getToken(GWSParser.HEAD, 0)

        def HEADD(self):
            return self.getToken(GWSParser.HEADD, 0)

        def END(self):
            return self.getToken(GWSParser.END, 0)

        def getRuleIndex(self):
            return GWSParser.RULE_modi

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModi" ):
                listener.enterModi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModi" ):
                listener.exitModi(self)




    def modi(self):

        localctx = GWSParser.ModiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_modi)
        self._la = 0 # Token type
        try:
            self.state = 186
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,21,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
                if la_ == 1:
                    self.state = 143
                    self.match(GWSParser.NUM)
                    self.state = 144
                    self.match(GWSParser.COLON)


                self.state = 147
                self.match(GWSParser.NUM)
                self.state = 148
                self.match(GWSParser.DASH)
                self.state = 149
                self.match(GWSParser.ANHYDRO)
                self.state = 150
                self.match(GWSParser.DASH)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.match(GWSParser.NUM)
                self.state = 152
                self.match(GWSParser.DASH)
                self.state = 153
                self.bridge()
                self.state = 154
                self.match(GWSParser.DASH)
                self.state = 155
                self.fgi()
                self.state = 156
                self.match(GWSParser.DASH)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==19:
                    self.state = 158
                    self.match(GWSParser.DASH)


                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==16:
                    self.state = 161
                    self.match(GWSParser.NUM)


                self.state = 167
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,18,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 164
                        self.bridge() 
                    self.state = 169
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,18,self._ctx)

                self.state = 170
                self.fgi()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 171
                self.match(GWSParser.NUM)
                self.state = 179
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [18, 30]:
                    self.state = 174
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==18:
                        self.state = 172
                        self.match(GWSParser.COLON)
                        self.state = 173
                        self.match(GWSParser.NUM)


                    self.state = 176
                    self.match(GWSParser.D)
                    pass
                elif token in [31]:
                    self.state = 177
                    self.match(GWSParser.E)
                    pass
                elif token in [4, 27, 28, 34]:
                    self.state = 178
                    self.carb()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 181
                self.match(GWSParser.HEAD)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 182
                self.match(GWSParser.HEADD)
                self.state = 183
                self.match(GWSParser.DASH)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 184
                self.match(GWSParser.DASH)
                self.state = 185
                self.match(GWSParser.END)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QnumContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QMARK(self):
            return self.getToken(GWSParser.QMARK, 0)

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(GWSParser.NUM)
            else:
                return self.getToken(GWSParser.NUM, i)

        def SLASH(self, i:int=None):
            if i is None:
                return self.getTokens(GWSParser.SLASH)
            else:
                return self.getToken(GWSParser.SLASH, i)

        def getRuleIndex(self):
            return GWSParser.RULE_qnum

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQnum" ):
                listener.enterQnum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQnum" ):
                listener.exitQnum(self)




    def qnum(self):
